--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,13 @@ body{
     max-width: 1160px;
     display: grid;
     margin:5rem auto;
-      gap: 2rem;
+    gap: 2rem;
+}
+.title{
+    text-align: center;
+    font-size: 3rem;
+    margin-top: 2rem;
+
 }
 @media screen and (min-width:768px) {
     .booklist{
